--- a/src/Pages/LandingPage/AboutUsPage/aboutus.module.css
+++ b/src/Pages/LandingPage/AboutUsPage/aboutus.module.css
@@ -131,7 +131,7 @@
 .ctaSection {
   padding: 80px 20px;
   text-align: center;
-  background: #d4a373;
+  background: #FFF7F6;
   color: #fff;
 }
 
