--- a/src/Pages/LandingPage/AdminPage/adminpage.module.css
+++ b/src/Pages/LandingPage/AdminPage/adminpage.module.css
@@ -78,7 +78,7 @@
 }
 
 .logoutCard:hover {
-    background: #E44D26;
+    background: #e090ad;
     transform: translateY(-5px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
