--- a/src/Pages/LandingPage/CheckoutPage/checkout.css
+++ b/src/Pages/LandingPage/CheckoutPage/checkout.css
@@ -9,6 +9,14 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
+
+h2 {
+    color:  #00312e;
+    font-size: 1.8rem;
+    margin-bottom: 15px;
+}
+
+
 .checkout-title {
     font-size: 24px;
     font-weight: 700;
@@ -104,7 +112,7 @@
     padding: 12px;
     font-size: 16px;
     font-weight: 600;
-    background: #28a745;
+    background:  #00312e;
     color: white;
     border: none;
     border-radius: 8px;
