--- a/src/Pages/LandingPage/MakeYourCandleForm/makeyourcandle.css
+++ b/src/Pages/LandingPage/MakeYourCandleForm/makeyourcandle.css
@@ -39,7 +39,7 @@ h3 {
     font-size: 2.0em;
     margin-bottom: 30px;
     font-weight: 700;
-    background: linear-gradient(45deg, #e44d26, #FFC300);
+    background: linear-gradient(45deg, #e090ad, #FFC300);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
