--- a/src/Pages/LandingPage/ProductList/productlist.css
+++ b/src/Pages/LandingPage/ProductList/productlist.css
@@ -1,3 +1,22 @@
+:root {
+    --deep-green: #00312e;
+    --forest: #066255;
+    --teal: #039f9b;
+    --rose: #e090ad;
+    --blush: #fad3d8;
+}
+
+.wellness {
+    padding: 1rem 1rem;
+    text-align: center;
+    background: #FCF7F7;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 500;
+    border-radius: 20px;
+    margin: 0rem;
+}
+
 .awesome-div {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), #FFFFFF); /* Soft green-to-white gradient */
     padding: 30px;
@@ -8,7 +27,7 @@
     font-family: 'Poppins', sans-serif;
     color: #333;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 20px;
     transition: transform 0.3s ease; /* Smooth hover transition */
 }
 
@@ -17,14 +36,22 @@
 }
 
 .awesome-div h2 {
+
+    padding: 3rem 2rem;
+    text-align: center;
+    background: linear-gradient(90deg, var(--forest), var(--rose));
+    color: white;
+    font-weight: 500;
     border-radius: 20px;
-    font-family: 'Montserrat', sans-serif;
+    margin: 2rem;
+
+    font-family: 'Poppins', 'Lato', Nunito Sans;
     font-size: 17px;
     padding-top: 8px;
     letter-spacing: 1px;
     margin-bottom: 15px;
     color: white; /* Earthy green */
-    background: linear-gradient(45deg, #e44d26, #FFC300);
+    background: linear-gradient(90deg, var(--forest), var(--rose));
     border-bottom: 2px solid grey; /* Underline for emphasis */
     padding-bottom: 8px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Soft shadow for readability */
@@ -46,7 +73,7 @@
     color: #333;
     font-size: 1.6em;
     font-weight: 900;
-    background: linear-gradient(45deg, #e44d26, #FFC300);
+    background: linear-gradient(45deg, #e090ad, #FFC300);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
